--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         </nav>
                     </div>
                 </section>
-                <section class="RecentBlock">
+                <section class="recent__main">
                     <div class="recent__container">
                         <h2 class="recent__title">Recent Posts</h2>
                         <div class="recent__item">
@@ -212,12 +212,220 @@
                         </div>
                     </div>
                         </div>
+                        <button class="recent__button">older posts</button>
                     </div>
+                    <aside class="recent__search">
+                        <div class="recent__search-container">
+                            <div class="input__search">
+                                <img src="/img/search.png" class="search__icon">
+                                <input type="search" placeholder="Search Blog">
+                            </div>
+                            <div class="recent__announcements">
+                                <div class="announcements__title">
+                                    <img src="/img/ilo-light-announcements.png" alt="" class="announcements__icon">
+                                    <h2 class="announcements__text">Announcements</h2>
+                                </div>
+                                <ol class="announcements__list">
+                                    <li class="announcements__list-item">Upcoming Changes (Live Chat, Less Censorship, More Access)</li>
+                                    <li class="announcements__list-item">New Servers (US Washington DC)</li>
+                                    <li class="announcements__list-item">New Servers (US Denver)</li>
+                                    <li class="announcements__list-item">Open Source: Releasing the PIA iOS Client</li>
+                                    <li class="announcements__list-item">Opera Extension is now available</li>
+                                </ol>
+                            </div>
+                            <div class="recent__announcements">
+                                <div class="announcements__title">
+                                    <img src="/img/Group.png" alt="" class="announcements__icon">
+                                    <h2 class="announcements__text">Popular posts</h2>
+                                </div>
+                                <ol class="announcements__list">
+                                    <li class="announcements__list-item">Upcoming Changes (Live Chat, Less Censorship, More Access)</li>
+                                    <li class="announcements__list-item">New Servers (US Washington DC)</li>
+                                    <li class="announcements__list-item">New Servers (US Denver)</li>
+                                    <li class="announcements__list-item">Open Source: Releasing the PIA iOS Client</li>
+                                    <li class="announcements__list-item">Opera Extension is now available</li>
+                                </ol>
+                            </div>
+                            <div class="recent__ad">
+                                <img src="/img/Bitmap-4.jpg" alt="" class="img__ad">
+                            </div>
+                            <div class="tag__posts">
+                                <h2 class="tag__title">Tag cloud</h2>
+                                <p class="tag__text">
+                                    Lorem ipsum dolor sit amet
+                                    consectetur adipisicing elit. 
+                                    Quaerat eos, ut itaque,
+                                    obcaecati aliquid,
+                                    in reiciendis beatae officiis 
+                                    quisquam temporibus
+                                    perspiciatis soluta voluptates 
+                                    blanditiis incidunt
+                                    ipsa eius deserunt. Magnam, necessitatibus.
+                                    in reiciendis beatae officiis 
+                                    quisquam temporibus
+                                    perspiciatis soluta voluptates 
+                                    blanditiis incidunt
+                                    ipsa eius deserunt. Magnam, necessitatibus.
+                                </p>
+                            </div>
+                        </div>
+                    </aside>
                 </section>
             </div>
+            <section class="pay__section">
+                <div class="pay__container">
+                    <h2 class="pay__title">Sign up today - 7 day money back quarantee</h2>
+                    <ul class="paycard__container">
+                        <li class="paycard__items">
+                            <ul class="paycard__item">
+                                <div class="paycard__title paycard__title_title">monthly</div>
+                                <div class="after__container">
+                                    <ul class="paycard__title">
+                                        <li class="paycard__title__curency">$</li>
+                                        <li class="paycard__title__money">6.95</li>
+                                        <li class="paycard__title__month">/mo.</li>
+                                    </ul>
+                                </div>
+                                <p class="paycard__title_sale">Includes all VPN features.</p>
+                                <div class="paycard__title_button">
+                                    <p>Sign up</p>
+                                </div>
+                            </ul>
+                        </li>
+                        <li class="paycard__items">
+                            <ul class="paycard__item">
+                                <div class="paycard__title paycard__title_title">monthly</div>
+                                <div class="after__container">
+                                    <ul class="paycard__title">
+                                        <li class="paycard__title__curency">$</li>
+                                        <li class="paycard__title__money">6.95</li>
+                                        <li class="paycard__title__month">/mo.</li>
+                                    </ul>
+                                </div>
+                                <p class="paycard__title_sale">Includes all VPN features.</p>
+                                <div class="paycard__title_button">
+                                    <p>Sign up</p>
+                                </div>
+                            </ul>
+                        </li>
+                        <li class="paycard__items">
+                            <ul class="paycard__item">
+                                <div class="paycard__title paycard__title_title">monthly</div>
+                                <div class="after__container">
+                                    <ul class="paycard__title">
+                                        <li class="paycard__title__curency">$</li>
+                                        <li class="paycard__title__money">6.95</li>
+                                        <li class="paycard__title__month">/mo.</li>
+                                    </ul>
+                                </div>
+                                <p class="paycard__title_sale">Includes all VPN features.</p>
+                                <div class="paycard__title_button">Sign up</div>
+                            </ul>
+                        </li>
+                    </ul>
+                    <ul class="paymethods__container">
+                        <li class="paymethods">Ways to pay:</li>
+                        <li class="paymethods">
+                            <img src="/img/pay_pal.png" alt="">
+                        </li>
+                        <li class="paymethods">
+                            <img src="/img/mc_vrt_pos.png" alt="">
+                        </li>
+                        <li class="paymethods">
+                            <img src="/img/amex_logo.png" alt="">
+                        </li>
+                        <li class="paymethods">
+                            <img src="/img/visa.png" alt="">
+                        </li>
+                        <li class="paymethods">
+                            <img src="/img/Bitcoin.png" alt="">
+                        </li>
+                        <li class="paymethods">
+                            <img src="/img/OK Pay.png" alt="">
+                        </li>
+                        <li class="paymethods">
+                            <img src="/img/Amazon-Pay-logo.png" alt="">
+                        </li>
+                    </ul>
+                    <ul class="paylinks__container">
+                        <li class="paylinks_items">
+                            <div class="paylinks__item">How to pay anonymously</div>
+                            <img src="/img/icon-green-upload.png" class="paylinks__row"></img>
+                        </li>
+                        <li class="paylinks_items">
+                            <div class="paylinks__item">REDEEM GIFT CARD</div>
+                            <img src="/img/icon-green-upload.png" class="paylinks__row"></img>
+                        </li>
+                    </ul>
+                </div>
+            </section>
         </main>
         <footer class="footer">
-            Footer
+            <div class="footer__container">
+                <img src="/img/logo-pia-black-no-tagline.png" class="footer__header"></img>
+                <div class="footer__container">
+                    <div class="footer__blocks">
+                        <div class="left__item">
+                            <ul class="block__item">
+                                <li class="footer__title-text">Company</li>
+                                <li class="item__text">About Us</li>
+                                <li class="item__text">Our Team</li>
+                                <li class="item__text">Careers</li>
+                                <li class="item__text">Press</li>
+                                <li class="item__text">In the Media</li>
+                                <li class="item__text">VPN Reviews</li>
+                                <li class="item__text">Companies We Support</li>
+                                <li class="item__text">Contact Us</li>
+                                <li class="item__text">Blog</li>
+                            </ul>
+                            <ul class="block__item">
+                                <ul class="bloks__items-group">
+                                    <li class="footer__title-text">programs</li>
+                                    <li class="programs__item">Whitehat Security</li>
+                                    <li class="programs__item">Affiliates</li>
+                                </ul>
+                                <ul class="bloks__items-group">
+                                    <li class="footer__title-text">learn more</li>
+                                    <li class="learn-more__item">VPN Encryption</li>
+                                    <li class="learn-more__item">Android VPN App</li>
+                                    <li class="learn-more__item">iOS VPN App</li>
+                                    <li class="learn-more__item">PIA Sitemap</li>
+                                </ul>
+                            </ul>
+                            <ul class="block__item">
+                                    <li class="footer__title-text">LEGAL</li>
+                                    <li class="legal__item">Terms Of Service</li>
+                                    <li class="legal__item">Privacy Policy</li>
+                                    <li class="legal__item">DMCA Policy</li>
+                                    <li class="legal__item">Export Control Policy</li>
+                            </ul>
+                        </div>
+                        <div class="right__item">
+                            <ul class="right__items">
+                                <li class="footer__title-text">ABOUT</li>
+                                <li class="about__text">Private Internet Access is the leading VPN Service provider specializing in secure, encrypted VPN tunnels which create several layers of privacy and security providing you safety on the internet. Our service is backed by multiple gateways worldwide with access in 28+ countries, 44+ regions.</li>
+                            </ul>
+                            <ul class="right__items">
+                                <li class="google__text">Map data provided by Google.</li>
+                                <li class="google__text">PC Mag Editor’s Choice award image reprinted with permission. © 2012 Ziff Davis, Inc. All Rights Reserved.</li>
+                                <li class="google__text">PC Mag Editor’s Choice award image reprinted with permission. © 2012 Ziff Davis, Inc. All Rights Reserved.</li>
+                                <li class="google__text">© London Trust Media, Inc. All Rights Reserved.</li>
+                            </ul>
+                            <ul class="right__items">
+                                <li class="footer__title-text">SOCIAL</li>
+                                <li class="about__icons">
+                                    <img src="/img/social/Shape.jpg" alt="">
+                                    <img src="/img/social/f.jpg" alt="">
+                                    <img src="/img/social/2SL.jpg" alt="">
+                                    <img src="/img/social/f.jpg" alt="">
+                                    <img src="/img/social/Shape-1.jpg" alt="">
+                                    <img src="/img/social/Group.jpg" alt="">
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
     </section>
 </body>
